# stackedfilters

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
BashScripts/: AdaptiveDiskExperimentsBash  AdaptiveDiskExperimentsStagesBash  BuildAndQueryTiming  DiskExperimentsBash  FirehoseExperimentsBash  InsertsExperiments2Bash  InsertsExperimentsBash  SyntheticExperimentsBash  UrlExperimentsBash
Figures/: ._CMakeLists.graffle  ._ConstructionAlgorithm.graffle  ._ConstructionAlgorithm_2.graffle  ._ConstructionAlgorithm_2_Square.graffle  ._ConstructionAlgorithm_3.graffle  ._DataSizes.graffle  ._FPR_Bloom_Flex_Labeled.graffle  ._FirehoseGraphs_All.graffle  ._FirehoseGraphs_All.graffle.sb-2512dd13-a29AsQ  ._Firehose_Experiments_All.graffle  ._Firehose_Experiments_All.graffle.sb-efecf0c6-3ZleXA  ._Firehose_Experiments_All.graffle.sb-efecf0c6-fgKZuN  ._Firehose_Experiments_All.graffle.sb-efecf0c6-tZQbp3  ._Integer_Experiments_All.graffle  ._Integer_Experiments_All.graffle.sb-35fab88b-DcRzAO  ._Integer_Experiments_All.graffle.sb-35fab88b-RMDUkd  ._Integer_Experiments_All.graffle.sb-35fab88b-SNQmSS  ._Integer_Experiments_All.graffle.sb-35fab88b-ZNEBOa  ._Integer_Experiments_All.graffle.sb-35fab88b-b4rrMA  ._Integer_Experiments_All.graffle.sb-35fab88b-h4vgsB  ._Integer_Experiments_All.graffle.sb-35fab88b-hDBjwG  ._Integer_Experiments_All.graffle.sb-35fab88b-o3dcxQ  ._Integer_Experiments_All.graffle.sb-35fab88b-rQB9ux  ._Integer_Experiments_All.graffle.sb-35fab88b-uDwRz7  ._Integer_Experiments_All.graffle.sb-85a12ea7-4r8acJ  ._Integer_Experiments_All.graffle.sb-85a12ea7-8TRsdL  ._Integer_Experiments_All.graffle.sb-85a12ea7-AG3uU2  ._Integer_Experiments_All.graffle.sb-85a12ea7-JZVPjl  ._Integer_Experiments_All.graffle.sb-85a12ea7-JvgCE2  ._Integer_Experiments_All.graffle.sb-85a12ea7-SutFGX  ._Integer_Experiments_All.graffle.sb-85a12ea7-VQLQi2  ._Integer_Experiments_All.graffle.sb-85a12ea7-mwpcs5  ._Integer_Experiments_All.graffle.sb-85a12ea7-qsc46X  ._Integer_Experiments_All.graffle.sb-85a12ea7-sRs9hq  ._Integer_Experiments_All_Reduced.graffle  ._Integer_Experiments_Learned.graffle  ._Integer_Experiments_Learned.graffle.sb-2512dd13-yy7nf6  ._Intro_Figure.graffle  ._Intro_Figure_Diamond.graffle  ._Intro_Figure_DiamondStratos.graffle  (+102 more)
Figures/DataSizes.graffle/: ._data.plist  ._en.strings  ._es.strings  ._fr.strings  ._it.strings  ._ja.strings  ._ko.strings  ._nl.strings  ._pt-BR.strings  ._ru.strings  ._zh-Hans.strings  data.plist
Figures/FPR_Bloom_Flex_Labeled.graffle/: ._data.plist  data.plist
Figures/FirehoseGraphs_All.graffle/: ._data.plist  data.plist
Figures/Firehose_Experiments_All.graffle/: ._data.plist  data.plist
Figures/Integer_Experiments_All.graffle/: ._data.plist  data.plist
Figures/Integer_Experiments_All_Reduced.graffle/: ._data.plist  data.plist
Figures/Integer_Experiments_Learned.graffle/: ._data.plist  data.plist
Figures/Intro_Figure.graffle/: ._data.plist  data.plist
Figures/Intro_Figure_With_Learned.graffle/: ._data.plist  data.plist
Figures/Robustness_Experiments_All.graffle/: ._data.plist  data.plist
Figures/Robustness_Experiments_All_Reduced.graffle/: ._data.plist  data.plist
Figures/URL_Experiments_All.graffle/: ._data.plist  data.plist
Figures/URL_Experiments_All_Square.graffle/: ._data.plist  data.plist
Headers/: AdaptiveStackedBF.h  BloomFilter.h  CQFilter.h  CityHash.h  Common.h  CuckooFilter.h  InterfaceAMQ.h  InterfaceElement.h  StackedAMQ.h  ZipfDistribution.h  bloom_filter_implementation.hpp  cf_hashutil.h  cuckoofilter.h  hashutil.h  nlopt.h  powerlaw.h  singletable.h
Main/: ASFOptimizationTest.cpp  AmplificationTester.cpp  CQFDataGenerator.cpp  CQFTest.cpp  CuckooDataGenerator.cpp  DataGenerator.cpp  DataSizeGenerator.cpp  Example.cpp  FirehoseDataGenerator.cpp  FirehoseDataGeneratorDiskVersion.cpp  FirehoseDataGeneratorDiskVersion2.cpp  InsertsDataGenerator.cpp  InsertsDataGenerator2.cpp  OneBitAdjustmentDataGenerator.cpp  RetouchedExperimentation.cpp  URLBlacklisting.cpp  URULBlacklistingDiskVersion.cpp  UniformDataGenerator.cpp  ZipfDiskVersionAdaptive.cpp  ZipfDiskVersionAdaptiveStages.cpp  ZipfGraphsDataGenerator.cpp  ZipfGraphsDataGeneratorDiskVersion.cpp  ZipfGraphsDataGeneratorMemoryVersion.cpp
OptimizationCode/: Makefile  asf_continuous_filter_optimization.cpp  asf_discrete_filter_optimization.cpp  filter_optimizer_bloom.cpp  filter_optimizer_int_based.cpp  full_workflow_bloom.cpp  full_workflow_filter_optimizer.cpp  workload_generator.cpp
OptimizationCode/include/: ASFContinuousOptimizationObject.h  ASFDiscreteOptimizationObject.h  ASFDiscreteOptimizationRoutines.h  ASFUtils.h  BloomOptimizationRoutines.h  OptimizationRoutines.h  utils.h  workload_generator.h
PythonScripts/: GenerateURLDataset.ipynb  Graphs.ipynb  LearnedBloomFIlter.ipynb  SandwichedLearnedBloom.py  generate_dataset.py
PythonScripts/.ipynb_checkpoints/: GenerateURLDataset-checkpoint.ipynb  Graphs-checkpoint.ipynb  LearnedBloomFIlter-checkpoint.ipynb
PythonScripts/DeepBloomLib/: AlmostPerfectModel.py  DeeperBloom.py  GRUModel.py  PerfectModel.py  results.py  test_bloom_filter.py  test_deep_bloom.py  test_models.py  utils.py
SavedModels/: HALF_NEGATIVES_MODEL.h5  HALF_NEGATIVES_MODEL_2.h5  HALF_NEGATIVES_NO_ORGS_MODEL.h5  HALF_NEGATIVES_NO_PRINCE_MODEL.h5
Source/: AdaptiveStackedBF.cpp  BloomFilter.cpp  CMakeCache.txt  CMakeLists.txt  CQFilter.cpp  CityHash.cpp  CuckooFilter.cpp  StackedAMQ.cpp  cf_hashutil.cc  cf_hashutil.cpp  gqf.cpp  partitioned_counter.cpp
include/BloomFilter/: BloomFilterLayer.h
include/CuckooFilter/: CuckooFilterLayer.h  cf_hashutil.h  cuckoofilter.h  debug.h  packedtable.h  permencoding.h  printutil.h  singletable.h
include/Optimization/: ASFContinuousOptimizationObject.h  ASFContinuousOptimizationRoutines.h  ASFUtils.h  BloomOptimizationRoutines.h  DiscreteOptimizationRoutines.h  OptimizationRoutines.h
include/QuotientFilter/: CQFilterLayer.h  bitsutil.h  gqf.cpp  gqf.h  gqf_int.h  hashutil.h  partitioned_counter.cpp  partitioned_counter.h
nlopt/: CMakeLists.txt
(+12 files in other folders)
